# voxvault

./: .gitignore  .gitmodules  README.md  docker-compose.yaml
documentos/: VoxVault_ADR_RFC.md  VoxtralMeet_Projeto.md  voxvault-claude-code-prompt.md
documentos/voxvault-apple/: INTEGRATION.py  test_apple_translation.py
documentos/voxvault-apple/providers/: apple_provider.py
python-orchestrator/: .env.example  Dockerfile  config.py  main.py  requirements.txt  test_apple_translation.py
python-orchestrator/db/: database.py  models.py
python-orchestrator/models/: schemas.py
python-orchestrator/services/: minutes_generator.py  post_processor.py  sentence_merger.py  session_manager.py  translation.py  ws_client.py
rust-core/: Cargo.toml  Dockerfile.frontend  index.html  package-lock.json  package.json  vite.config.ts
rust-core/src/: App.css  App.tsx
rust-core/src-tauri/: Cargo.toml  tauri.conf.json
rust-core/src-tauri/capabilities/: default.json
rust-core/src-tauri/src/: lib.rs  main.rs
rust-core/src/components/: SettingsPanel.tsx  StatusBar.tsx  TitleBar.tsx  TranscriptView.tsx
rust-core/src/hooks/: useNotification.ts  useSession.ts  useTranscript.ts
rust-core/src/types/: index.ts
rust-core/voxvault-core/: Cargo.toml
rust-core/voxvault-core/src/: lib.rs
rust-core/voxvault-core/src/audio/: capture.rs  mod.rs  processor.rs  setup.rs
rust-core/voxvault-core/src/server/: websocket.rs
rust-core/voxvault-core/src/voxtral/: engine.rs  mod.rs  streaming.rs  types.rs
scripts/: build-production.sh  dev.sh  download-models.sh
